# Infinitely-Variable-Rectangle-Compression

./: .gitignore  README.md  build.bat  ivr_codec.c  ivr_gui_preview.py  ivr_pal512.c  numpy_ver.py
ivr-previewer/: index.html  package-lock.json  package.json
ivr-previewer/src/: main.ts  styles.css
ivr-previewer/src-tauri/: Cargo.toml  tauri.conf.json
ivr-previewer/src-tauri/capabilities/: default.json
ivr-previewer/src-tauri/src/: lib.rs  main.rs
ivr_converter/: Cargo.toml
ivr_converter/src/: main.rs
