[package]
description = "A Tauri App"
authors = ["you"]
edition = "2021"


name = "ivr_converter"
version = "0.1.0"
[profile.release]
opt-level = 3          # /O3 に相当
lto = true             # /GL /LTCG (リンク時最適化) に相当
codegen-units = 1      # 最適化効率を最大化
panic = "abort"        # バイナリサイズ削減

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ivr_previewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
zstd = "0.13.3"
image = "0.24"

